tests/NormalTests/paczka1/small_fuzzy/97798893.err
Error in line 2: ObIU57mds A124 54,0
Error in line 7: A902 A12v 60,v
